Fix heading elements descending order - Contrast ratio - Reset SCSS

--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,4 +1,4 @@
-$footer-font: 'Merriweather', 'Times New Roman', Times, serif;;	
+$footer-font: 'Merriweather', 'Times New Roman', Times, serif;
 $footer-hover: #d6c6b4;
 $footer-background-color: #63545f;	
 $hover-color: white;
