--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -1,4 +1,4 @@
-$header-font: 'Alfa Slab One', 'Times New Roman', Times, serif;;	
+$header-font: 'Alfa Slab One', 'Times New Roman', Times, serif;	
 $header-main-hover:#4a2c2a;
 $page-background-color:#e6e0d4;	
 
@@ -26,9 +26,10 @@ $page-background-color:#e6e0d4;
             display: flex;
             justify-content: space-between;
             margin: auto;
-            h3 {
+            h2 {
                 padding: 20px 0 5px;
                 letter-spacing: 2px; 
+                font-size: 1.4625rem;
                 font-weight: lighter;
                 font-family: $header-font;
                 color: $header-main-hover;
@@ -41,7 +42,7 @@ $page-background-color:#e6e0d4;
 
         .add {
             margin-bottom:-20px;
-            h3 {
+            h2 {
                 font-size: 1.5rem;
                 color: rgb(119, 1, 1);
             }
@@ -81,12 +82,12 @@ $page-background-color:#e6e0d4;
             padding: 0 20%;
             ul li {
                 font-size: 1.15rem;
-                h3 {
+                h2 {
                     font-size: 1.25rem;
                 }
             }
 
-            .add h3 {
+            .add h2 {
                 font-size: 1.375rem;
             }
         }
@@ -121,7 +122,7 @@ $page-background-color:#e6e0d4;
             ul li {
                 margin: auto -5px;
                 font-size: 1rem;
-                h3 {
+                h2 {
                     padding: 10px 0 5px;
                     letter-spacing: 1px; 
                     font-size: 1.125rem;
@@ -134,7 +135,7 @@ $page-background-color:#e6e0d4;
 
             .add {
                 margin-bottom: -15px;
-                h3 {
+                h2 {
                     font-size: 1.2rem;
                 }
             }
@@ -146,11 +147,11 @@ $page-background-color:#e6e0d4;
 
     .menu {  
         &-box {
-            ul li h3 {
+            ul li h2 {
                 font-size: 1.05rem;
             }  
                    
-            .add h3 {
+            .add h2 {
                 font-size: 1.1rem;
             }
         }
@@ -160,11 +161,11 @@ $page-background-color:#e6e0d4;
 @media only screen and (max-width: 330px) {
 
     .menu {           
-        ul li h3 {
+        ul li h2 {
             font-size: 0.95rem;
         }
 
-        .add h3 {
+        .add h2 {
             font-size: 0.99rem;
         }
     }
