--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css?family=Alfa Slab One&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open Sans&display=swap');
 
-$main-font: 'Open Sans', 'Times New Roman', Times, serif;;	
+$main-font: 'Open Sans', 'Times New Roman', Times, serif;
 
 * {
     margin: 0;
